# qt

./: test.cpp
01_QMainWindow/: CMakeLists.txt  mainwindow.cpp
01_smallwidget/: CMakeLists.txt  smallform.cpp  smallform.h  smallform.ui  widget.cpp  widget.ui
02_QtEvent/: CMakeLists.txt  mylabel.cpp  mylabel.h  widget.cpp  widget.h  widget.ui
02_QtSource/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  res.qrc
02_SignalAndSlot/: CMakeLists.txt  student.cpp  student.h  teacher.cpp  teacher.h  widget.cpp  widget.h
03_QDialog/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
03_QtPainter/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
04_Layout/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
04_QtPaintDevice/: CMakeLists.txt  widget.cpp  widget.ui
05_QtControl/: CMakeLists.txt  widget.cpp  widget.ui
05_QtFile/: CMakeLists.txt  widget.cpp  widget.ui
06_QtTreeWidget/: CMakeLists.txt  widget.cpp  widget.ui
07_QtTableWidget/: CMakeLists.txt  widget.cpp  widget.ui
08_OtherControl/: CMakeLists.txt  widget.cpp  widget.ui
FileClean/: CMakeLists.txt  rwidget.cpp  rwidget.h  rwidget.ui  widget.cpp  widget.h  widget.ui
Game_FlipCoin/: CMakeLists.txt  Coin0001.icns  chooselevelscene.cpp  chooselevelscene.h  dataconfig.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  mycoin.cpp  mycoin.h  mypushbutton.cpp  mypushbutton.h  playscene.cpp  playscene.h  res.qrc
build-01_QMainWindow-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-01_QMainWindow-arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
build-01_QMainWindow-arm_darwin_generic_mach_o_64bit-Debug/01_QMainWindow_autogen/: deps
build-01_SmallWidget-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-02_QtEvent-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-02_QtSource-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-02_SignalAndSlot-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-03_QDialog-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-03_QtPainter-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-04_Layout-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-04_QtPaintDevice-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-05_QtControl-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-05_QtFile-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-06_QtTreeWidget-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-07_QtTableWidget-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-08_OtherControl-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-FileClean-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Game_FlipCoin-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Game_FlipCoin-arm_darwin_generic_mach_o_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-test01-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-test02-arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
test02/: CMakeLists.txt
(+292 files in other folders)
